fixed app overlay background to be aligned with body width

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -3,11 +3,20 @@
 
 .app {
     position: relative;
-    width: 1440px;
     min-height: 100vh;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: auto;
+
+    &__overlay-background {
+        top: 80px;
+        position: absolute;
+        width: 100vw;
+        min-height: 100vh;
+        height: 100%;
+        background: #39374838;
+        z-index: 2;
+    }
 }
