--- a/src/Components/CartOverlay/CartOverlay.scss
+++ b/src/Components/CartOverlay/CartOverlay.scss
@@ -7,15 +7,6 @@
     width: 100%;
     z-index: 1;
 
-    &__background {
-        position: absolute;
-        width: 100vw;
-        min-height: 100vh;
-        height: 100%;
-        background: #39374838;
-        z-index: 2;
-    }
-
     ::-webkit-scrollbar {
         width: 5px;
     }
