--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -5,7 +5,7 @@
     padding: 0px 100px;
     padding-top: 24px;
     height: 80px;
-    width: 100%;
+    width: 1440px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -15,6 +15,6 @@
     line-height: 19px;
     letter-spacing: 0px;
     text-align: center;
-
+    margin: auto;
 }
 
