--- a/src/layouts/Main/Main.scss
+++ b/src/layouts/Main/Main.scss
@@ -3,6 +3,7 @@
 
 main {
     position: relative;
-    width: 100%;
+    width: 1440px;
     height: 100%;
+    margin: auto;
 }
